V 0.0.6 Проведено полное тестирование