@@ -1,10 +1,11 @@
 package com.petralib.file;
 
 import com.petralib.block.enitity.BlockEntity;
+import com.petralib.block.enitity.VariableEntity;
 import com.petralib.block.enums.BlockType;
 import com.petralib.block.repo.BlockRepository;
 import com.petralib.file.model.*;
-import com.petralib.file.value.BuilderConstructor;
+import com.petralib.file.value.ValueModelConstructor;
 import com.petralib.scenario.entity.ScenarioBlockEntity;
 import com.petralib.scenario.repo.ScenarioBlockRepo;
 import lombok.AccessLevel;
@@ -13,8 +14,6 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.function.BiConsumer;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -52,18 +51,25 @@ public class FileConstructor {
     private Collection<LocalConsumerModel> consumers(Long serviceId) {
         Collection<BlockEntity> consumers = blockRepository.findBlocksByServiceAndType(serviceId, BlockType.ACTION);
         consumers.addAll(blockRepository.findBlocksByServiceAndType(serviceId, BlockType.WORKFLOW));
-        return consumers.stream()
-                .map(blockEntity -> new LocalConsumerModel(
-                        blockEntity.getId(),
-                        "0",
-                        blockEntity.getType().name(),
-                        blockEntity.getName(),
-                        blockEntity.getInVariables().stream().map(entity -> new ValueDto(entity.getId(), entity.getName(), entity.getMultiplicity().name()))
-                                .collect(Collectors.toList()),
-                        blockEntity.getOutVariables().stream().map(entity -> new ValueDto(entity.getId(), entity.getName(), entity.getMultiplicity().name()))
-                                .collect(Collectors.toList())
 
-                )).toList();
+        return consumers.stream()
+                .map(blockEntity -> {
+                    List<VariableEntity> inAndTimedVariables = new ArrayList<>();
+                    inAndTimedVariables.addAll(blockEntity.getInVariables());
+                    inAndTimedVariables.addAll(blockEntity.getAllTimedVariables());
+                    return new LocalConsumerModel(
+                            blockEntity.getId(),
+                            "0",
+                            blockEntity.getType().name(),
+                            blockEntity.getName(),
+                            inAndTimedVariables.stream()
+                                    .map(entity -> new ValueDto(entity.getId(), entity.getName(), entity.getMultiplicity().name()))
+                                    .collect(Collectors.toList()),
+                            blockEntity.getOutVariables().stream().map(entity -> new ValueDto(entity.getId(), entity.getName(), entity.getMultiplicity().name()))
+                                    .collect(Collectors.toList())
+
+                    );
+                }).toList();
     }
 
     private Collection<LocalProducerModel> producers(Long serviceId) {
@@ -80,19 +86,27 @@ public class FileConstructor {
             workflowEntities.get(scen.getBlock().getId()).add(scen);
         }
 
+        //заполнить модели удаленных консюмеров
         Collection<LocalProducerModel> localProducersModels = new ArrayList<>();
         workflowEntities.forEach((workflowId, scenarioBlockEntities) -> {
             Collection<ScenarioBlockEntity> workflowChildrenBlocks = scenarioBlockRepo.findScenarioBlocksByWorkflow(workflowId);
             Collection<RemoteConsumerModel> consumers = new ArrayList<>();
             for (ScenarioBlockEntity child : workflowChildrenBlocks) {
-                Collection<ValueModel> valueParser = BuilderConstructor.loaderModelMap(child);
+                Collection<ValueModel> valueParser = ValueModelConstructor.loaderModelMap(child);
+                Collection<ValueDto> contextValues = child.getContextVariables().stream()
+                        .map(variableEntity -> new ValueDto(variableEntity.getId(), variableEntity.getName(),
+                                variableEntity.getMultiplicity().name())).toList();
                 consumers.add(new RemoteConsumerModel(
                         child.getBlock().getId(),
                         "0",
                         child.getBlock().getService().getPath(),
                         workflowId,
                         "0",
-                        valueParser
+                        child.getBlock().getName(),
+                        valueParser,
+                        contextValues,
+                        child.getNextScenarioBlock() != null ? child.getNextScenarioBlock().getBlock().getId() : null,
+                        child.getPreviousScenarioBlock() != null ? child.getPreviousScenarioBlock().getBlock().getId() : null
                 ));
             }
 
@@ -102,58 +116,22 @@ public class FileConstructor {
                     exit = enterExit;
                 }
             }
-            Collection<ValueModel> valueParser = BuilderConstructor.loaderModelMap(exit);
+            Collection<ValueModel> valueParser = ValueModelConstructor.loaderModelMap(exit);
+            Collection<ValueDto> contextValues = exit.getContextVariables().stream()
+                    .map(variableEntity -> new ValueDto(variableEntity.getId(), variableEntity.getName(),
+                            variableEntity.getMultiplicity().name())).toList();
             LocalProducerModel localProducerModel = new LocalProducerModel(
                     workflowId,
                     "0",
                     exit.getBlock().getName(),
                     consumers,
-                    valueParser
+                    valueParser,
+                    contextValues
             );
             localProducersModels.add(localProducerModel);
         });
         return localProducersModels;
-
-
-//            Map<Long, Collection<ScenarioBlockEntity>> workflowEntities = scenarioBlockRepo.findScenarioBlocksByService(serviceId)
-//                    .stream()
-//                    .filter(scenarioBlockEntity -> scenarioBlockEntity.getBlock().getType() == BlockType.WORKFLOW)
-//                    .collect(Collectors.toMap(new Function<ScenarioBlockEntity, Long>() {
-//                    }))
-
-
-//                    .map(scenarioBlockEntity -> {
-//
-//                        Collection<ScenarioBlockEntity> workflowChildrenBlocks = scenarioBlockRepo.findScenarioBlocksByWorkflow(scenarioBlockEntity.getBlock().getId());
-//                        Collection<RemoteConsumerModel> consumers = new ArrayList<>();
-//                        for (ScenarioBlockEntity child : workflowChildrenBlocks) {
-//                            Collection<ValueModel> valueParser = BuilderConstructor.loaderModelMap(child);
-//                            consumers.add(new RemoteConsumerModel(
-//                                    child.getBlock().getId(),
-//                                    "0",
-//                                    child.getBlock().getService().getPath(),
-//                                    scenarioBlockEntity.getBlock().getId(),
-//                                    "0",
-//                                    valueParser
-//                            ));
-//                        }
-//
-//                        Collection<ValueModel> lastWorkflowBlockValueParser = null;
-//                        Optional<ScenarioBlockEntity> scenarioBlockEntityOpt = scenarioBlockRepo.findScenarioBlockForWorkflowExit(scenarioBlockEntity.getBlock().getId());
-//                        if (scenarioBlockEntityOpt.isPresent()) {
-//                            ScenarioBlockEntity exit = scenarioBlockEntityOpt.get();
-//                            lastWorkflowBlockValueParser = BuilderConstructor.loaderModelMap(exit);
-//                        }
-//                        return new LocalProducerModel(
-//                                scenarioBlockEntity.getBlock().getId(),
-//                                "0",
-//                                scenarioBlockEntity.getBlock().getName(),
-//                                consumers,
-//                                lastWorkflowBlockValueParser
-//                        );
-//                    })
-//                    .toList();
-        }
-
-
     }
+
+
+}
